Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-15491

External links in Help mode do not open

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 3.6.1
    • Qt Creator 3.6.0
    • Help System
    • None

    Description

      External links in the Qt documentation do not open anymore in a browser. Instead, a 404 page is shown within Qt Help module.

      How to reproduce

      Open "Qt 5.6 reference documentation" page
      Try to click on one of the blue underlined texts

      Output

      The page could not be found
      Error loading: http://www.qt.io/download/
      Check that you have the corresponding documentation set installed.
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            con Eike Ziller
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes