TextBrowserHelpViewer: Fix opening external links

External links were not opening at all. The logic for that was present
for TextBrowserHelpViewer::setSource, but clicking on links would
directly go through the text browsers loadResource method. Avoid that by
turning off openLinks and handling the anchorClicked signal instead.

Task-number: QTCREATORBUG-15491
Change-Id: I86017f14138b98738221c1aed42c37551feaf671
Reviewed-by: Kai Koehne <kai.koehne@theqtcompany.com>